--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,8 @@
     android:background="@color/background_color"
     tools:context=".MainActivity">
 
+<!-- almost every elements and present inside a linear layout for good ui design-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
